corrected spacing

--- a/loginadire.css
+++ b/loginadire.css
@@ -290,11 +290,12 @@ ul{
 /* ---------------------media query----------------- */
 @media only screen and (max-width: 800px){
 
+
   nav ul{
 
     position: absolute;
     top: 120px;
-    left: 150px;
+    left: 110px;
     background: #333;
     width: 70%;
     
@@ -306,7 +307,7 @@ ul{
   }
   nav ul li{
     display: block;
-    margin-right: 50px;
+    margin-right: 40px;
     margin-top: 10px;
     margin-bottom: 10px;
   }
@@ -337,6 +338,11 @@ ul{
 /*media query*/
 
 @media only screen and (max-width: 600px){
+  *{
+    margin: 0px -10px 0px 0px;
+    
+    box-sizing: border-box;
+  }
   .small-container   .row{
     text-align: center;
     display: flex;
